@@ -4,7 +4,10 @@ import com.dtteam.dynamictrees.api.worldgen.GroundFinder;
 import com.dtteam.dynamictrees.util.CoordUtils;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
+import net.minecraft.core.registries.Registries;
+import net.minecraft.resources.ResourceLocation;
 import net.minecraft.tags.BlockTags;
+import net.minecraft.tags.TagKey;
 import net.minecraft.world.level.LevelAccessor;
 import net.minecraft.world.level.levelgen.Heightmap;
 
@@ -52,8 +55,8 @@ public class SubterraneanGroundFinder implements GroundFinder {
         }
 
         // Discard the last result as it's just the top of the biome(bedrock for nether)
-        if (layers.size() > 0) {
-            layers.remove(layers.size() - 1);
+        if (!layers.isEmpty()) {
+            layers.removeLast();
         }
 
         return layers;
@@ -69,8 +72,8 @@ public class SubterraneanGroundFinder implements GroundFinder {
         for (int y : layers) {
             BlockPos pos = new BlockPos(start.getX(), y, start.getZ());
             //We only want positions for underground biomes and underground dimensions
-//            if (level.dimensionType().hasCeiling() || level.getBiome(pos).is(Tags.Biomes.IS_UNDERGROUND))
-//                positions.add(pos);
+            if (level.dimensionType().hasCeiling() || level.getBiome(pos).is(TagKey.create(Registries.BIOME, ResourceLocation.parse("c:is_underground"))))
+                positions.add(pos);
         }
 
         return positions;
